css/style.css
/* Global
================================================== */

body {
	background: #f2f2f2;
	color: #7a7a7a;
	font-family: 'Open Sans', Arial, Helvetica, sans-serif;
	font-weight: 300;
	line-height: 21px;
}
h1, h2, h3, h4, h5, h6 {
	font-weight: 300;
	text-transform: uppercase;
	color: #2f2f2f;
	text-rendering: auto;
}
.title {
	font-weight: 800;
	font-size: 36px;
	line-height: 36px;
}
.title span {
	display: block;
	font-weight: 300;
	font-size: 24px;
	line-height: 26px;
	padding-top: 10px;
}
a:link, a:visited {
	color: #2575BE;
}
a:hover, a:focus {
	color: #2575BE;
}
.btn {
	font-weight: 800;
	text-transform: uppercase;
	border-radius: 0;
	-moz-border-radius: 0;
	-webkit-border-radius: 0;
	border: 0;
	box-shadow: none;
	-moz-box-shadow: none;
	-webkit-box-shadow: none;
	background-image: none;
	text-shadow: 0 1px 0 rgba(0,0,0,0.15);
	-moz-text-shadow: 0 1px 0 rgba(0,0,0,0.15);
	-webkit-text-shadow: 0 1px 0 rgba(0,0,0,0.15);
	color: #f2f2f2;
	background-color: #2575BE;
}
a.btn {
	color: #f2f2f2 !important;
}
a.btn-link {
	color: #2575BE !important;
}
.btn:hover, .btn:focus {
	-webkit-transition: none;
	-moz-transition: none;
	-o-transition: none;
	transition: none;
}
.btn:hover, .btn:focus, .btn:active, .btn.active, .btn.disabled, .btn[disabled] {
	color: #f2f2f2;
	background-color: #7aa21b;
}
.btn-primary {
	background-color: #006dcc;
}
.btn-primary:hover, .btn-primary:focus, .btn-primary:active, .btn-primary.active, .btn-primary.disabled, .btn-primary[disabled] {
	background-color: #0044cc;
}
.btn-primary:active, .btn-primary.active {
	background-color: #003399 \9;
}
.btn-warning {
	background-color: #faa732;
}
.btn-warning:hover, .btn-warning:focus, .btn-warning:active, .btn-warning.active, .btn-warning.disabled, .btn-warning[disabled] {
	background-color: #f89406;
}
.btn-warning:active, .btn-warning.active {
	background-color: #c67605 \9;
}
.btn-danger {
	background-color: #da4f49;
}
.btn-danger:hover, .btn-danger:focus, .btn-danger:active, .btn-danger.active, .btn-danger.disabled, .btn-danger[disabled] {
	background-color: #bd362f;
}
.btn-danger:active, .btn-danger.active {
	background-color: #942a25 \9;
}
.btn-success {
	background-color: #5bb75b;
}
.btn-success:hover, .btn-success:focus, .btn-success:active, .btn-success.active, .btn-success.disabled, .btn-success[disabled] {
	background-color: #51a351;
}
.btn-success:active, .btn-success.active {
	background-color: #408140 \9;
}
.btn-info {
	background-color: #49afcd;
}
.btn-info:hover, .btn-info:focus, .btn-info:active, .btn-info.active, .btn-info.disabled, .btn-info[disabled] {
	background-color: #2f96b4;
}
.btn-info:active, .btn-info.active {
	background-color: #24748c \9;
}
.btn-inverse {
	background-color: #363636;
}
.btn-inverse:hover, .btn-inverse:focus, .btn-inverse:active, .btn-inverse.active, .btn-inverse.disabled, .btn-inverse[disabled] {
	background-color: #222222;
}
.btn-inverse:active, .btn-inverse.active {
	background-color: #080808 \9;
}
.btn-link, .btn-link:active, .btn-link[disabled] {
	background-color: transparent;
	background-image: none;
}
.btn-link {
	color: #2575BE;
}
.btn-link:hover, .btn-link:focus {
	color: #2575BE;
	background-color: transparent;
}
blockquote {
	font-family: 'Roboto Slab', Georgia, "Times New Roman", Times, serif;
	color: #2575BE;
	padding: 0;
	border: none;
	font-size: 18px;
	line-height: 22px;
	font-weight: 300;
}
blockquote cite {
	display: block;
	color: #7a7a7a;
	font-weight: 300;
	margin-top: 8px;
}
blockquote cite:before {
	content: "\2014 \0020";
}
hr {
	border-color: #cfd5c3;
}
.span1, .span2, .span3, .span4, .span5, .span6, .span7, .span8, .span9, .span10, .span11, .span12 {
	margin-bottom: 50px;
}
.nobottom {
	margin-bottom: 0 !important;
}
.halfbottom {
	margin-bottom: 25px !important;
}
.expander {
	background: #2f2f2f;
	border: none;
	float: right;
	margin: 10px -20px 0 0;
	padding-top: 3px;
	padding-bottom: 3px;
	border-radius: 0;
	-moz-border-radius: 0;
	-webkit-border-radius: 0;
}
.expander:hover {
	background: #2575BE;
}
#toTop {
	background: #2575BE;
}
#toTop a {
	display: block;
	width: 28px;
	height: 30px;
	padding: 10px 0 0 12px;
}
input, select, textarea {
	margin-bottom: 0 !important;
	border-radius: 0 !important;
	-moz-border-radius: 0 !important;
	-webkit-border-radius: 0 !important;
}
.well, .progress, .modal {
	border-radius: 0;
	-moz-border-radius: 0;
	-webkit-border-radius: 0;
}
/* Layout
================================================== */

/* IE Warning */
#ie-warning {
	display: none;
	margin: 0;
	padding: 20px 0;
	text-align: center;
}
/* Header */
#header {
	width: 100%;
	position: absolute;
	color: #f2f2f2;
	z-index: 9999;
}
#header-logo {
}
#header-nav {
	font-weight: 800;
	text-transform: uppercase;
}
#header-nav .navbar-inner {
	border: none;
	border-radius: 0;
	-moz-border-radius: 0;
	webkit-border-radius: 0;
	background: #2575BE;
	filter: none;
	min-height: 60px;
	padding-top: 20px;
}
#header-nav .navbar .nav > li > a {
	color: #f2f2f2;
	text-shadow: 0 1px 0 rgba(0,0,0,0.15);
	-moz-text-shadow: 0 1px 0 rgba(0,0,0,0.15);
	-webkit-text-shadow: 0 1px 0 rgba(0,0,0,0.15);
}
#header-nav .navbar .nav > li > a:hover, #header-nav .navbar .nav > li > a:focus {
	color: #2f2f2f;
}
#header-nav .navbar .nav > .active > a, #header-nav .navbar .nav > .active > a:hover, #header-nav .navbar .nav > .active > a:focus {
	background: none;
	box-shadow: none;
	-moz-box-shadow: none;
	-webkit-box-shadow: none;
	color: #2f2f2f !important;
}
#header-nav .nav-collapse .nav > li > a, #header-nav .nav-collapse .dropdown-menu a {
	border-radius: 0;
}
#header-nav .navbar .btn-navbar {
	background: none;
	box-shadow: none;
	-moz-box-shadow: none;
	-webkit-box-shadow: none;
	text-shadow: 0 1px 0 rgba(0,0,0,0.15);
	-moz-text-shadow: 0 1px 0 rgba(0,0,0,0.15);
	-webkit-text-shadow: 0 1px 0 rgba(0,0,0,0.15);
	padding: 5px 0 0 0;
}
#header-nav .navbar .btn-navbar:hover {
	background: none;
	color: #2f2f2f;
}
/* ... */

